Configurando filtragem e edição

--- a/src/app/contacts/cadastro-contatos/cadastro-contato.component.html
+++ b/src/app/contacts/cadastro-contatos/cadastro-contato.component.html
@@ -1,5 +1,5 @@
 <div class="form-container">
-  <div class="main-content">
+  <div class="main-content" *ngIf="cadastro">
     <form
       autocomplete="off"
       [formGroup]="cadastro"
