--- a/src/app/contacts/listagem-contatos/listagem-contatos.component.css
+++ b/src/app/contacts/listagem-contatos/listagem-contatos.component.css
@@ -79,20 +79,6 @@
   justify-content: flex-end;
 }
 
-.info-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.info-container h4 {
-  font-weight: 500;
-}
-
-.info-container p {
-  font-weight: normal;
-}
-
 .buttons {
   display: flex;
   align-items: center;
@@ -100,10 +86,12 @@
 }
 
 .buttons button {
-  width: 2rem;
+  width: 5rem;
   height: 2rem;
   margin-right: 0.5rem;
   border: none;
+  border-radius: 2rem;
+  box-shadow: 1px 3px 5px 0px rgb(0 0 0 / 30%);
   background: #babcbe;
 
   transition: background 200ms;
